--- a/pom/common-project-parent/pom.xml
+++ b/pom/common-project-parent/pom.xml
@@ -108,6 +108,16 @@
                     </archive>
                 </configuration>
             </plugin>
+
+            <!-- 打包时跳过测试 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
