--- a/aj-sample-app/pom.xml
+++ b/aj-sample-app/pom.xml
@@ -15,8 +15,13 @@
     <artifactId>aj-sample-app</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <!-- 这里是项目主类运行入口 -->
+        <project.mainClass>org.example.AjFrameworkSampleApp</project.mainClass>
+    </properties>
+
     <dependencies>
-        <dependency>
+       <dependency>
             <groupId>com.ajaxjs</groupId>
             <artifactId>aj-iam-client</artifactId>
             <version>1.1</version>
@@ -40,13 +45,5 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.7.18</version>
-            </plugin>
-        </plugins>
-    </build>
+
 </project>
