--- a/pom/opensource-parent/pom.xml
+++ b/pom/opensource-parent/pom.xml
@@ -281,6 +281,12 @@
                 <version>2.18.3</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>2.18.3</version>
+            </dependency>
+
             <!--加了这个启动不了-->
             <!--<dependency>
                 <groupId>org.springframework</groupId>
