--- a/aj-base/pom.xml
+++ b/aj-base/pom.xml
@@ -16,8 +16,48 @@
     <packaging>jar</packaging>
     <description>Base module, like data dictionary, file unloading, etc.</description>
 
-    <dependencies>
+    <properties>
+        <!-- 这里是项目主类运行入口 -->
+        <project.mainClass>com.ajaxjs.base.BaseApp</project.mainClass>
+    </properties>
 
+    <build>
+        <plugins>
+            <!--一键部署到服务器 SSH-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>wagon-maven-plugin</artifactId>
+                <version>2.0.2</version>
+                <executions>
+                    <execution>
+                        <id>upload-deploy</id>
+                        <!-- 运行 install 打包的同时运行 upload-single和sshexec -->
+                        <phase>install</phase>
+                        <goals>
+                            <goal>upload-single</goal>
+                            <goal>sshexec</goal>
+                        </goals>
+                        <configuration>
+                            <!-- 指定 SSH 账号 -->
+                            <serverId>test.ajaxjs.com</serverId>
+                            <!-- 要更新的 jar 包 -->
+                            <fromFile>target/aj-base.jar</fromFile>
+                            <!-- 服务器部署位置 -->
+                            <url>${ssh.url.iam}</url>
+                            <!-- 重启脚本 先切换目录，才能正确执行脚本 -->
+                            <commands>
+                                <command>cd /home/service/aj-base;./startup.sh</command>
+                            </commands>
+                            <!-- 显示运行命令的输出结果 -->
+                            <displayCommandOutputs>true</displayCommandOutputs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
         <dependency>
             <groupId>com.ajaxjs</groupId>
             <artifactId>aj-message-common</artifactId>
