--- a/aj-message/aj-message/pom.xml
+++ b/aj-message/aj-message/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ajaxjs</groupId>
         <artifactId>ajaxjs-parent</artifactId>
-        <version>1.32</version>
+        <version>1.33</version>
         <relativePath/>
     </parent>
 
@@ -16,10 +16,18 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- 编译为 jar 包时依赖的 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.ajaxjs</groupId>
             <artifactId>sqlman</artifactId>
-            <version>1.3</version>
+            <version>1.6</version>
         </dependency>
 
         <dependency>
