--- a/aj-base/pom.xml
+++ b/aj-base/pom.xml
@@ -31,7 +31,7 @@
                 <executions>
                     <execution>
                         <id>upload-deploy</id>
-                        <!-- 运行 install 打包的同时运行 upload-single和sshexec -->
+                        <!-- 运行 install 打包的同时运行 upload-single 和 sshexec -->
                         <phase>install</phase>
                         <goals>
                             <goal>upload-single</goal>
@@ -43,10 +43,10 @@
                             <!-- 要更新的 jar 包 -->
                             <fromFile>target/aj-base.jar</fromFile>
                             <!-- 服务器部署位置 -->
-                            <url>${ssh.url.iam}</url>
+                            <url>scp://test.ajaxjs.com/home/service/aj-base</url>
                             <!-- 重启脚本 先切换目录，才能正确执行脚本 -->
                             <commands>
-                                <command>cd /home/service/aj-base;./startup.sh</command>
+                                <command>cd /home/service/aj-base;./startup-without-console.sh</command>
                             </commands>
                             <!-- 显示运行命令的输出结果 -->
                             <displayCommandOutputs>true</displayCommandOutputs>
