--- a/incubator/live-stream/pom.xml
+++ b/incubator/live-stream/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.ajaxjs</groupId>
-        <artifactId>aj-common-parent</artifactId>
-        <version>2.8</version>
+        <artifactId>ajaxjs-parent</artifactId>
+        <version>1.33</version>
         <relativePath/>
     </parent>
 
@@ -13,48 +13,6 @@
     <version>1.0</version>
     <description>Live Stream</description>
     <packaging>jar</packaging>
-
-    <properties>
-        <!-- 这里是项目主类运行入口 -->
-        <project.mainClass>com.ajaxjs.iam.server.IamServerApp</project.mainClass>
-    </properties>
-
-    <build>
-        <plugins>
-            <!--一键部署到服务器 SSH-->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>wagon-maven-plugin</artifactId>
-                <version>2.0.2</version>
-
-                <executions>
-                    <execution>
-                        <id>upload-deploy</id>
-                        <!-- 运行 install 打包的同时运行 upload-single 和 sshexec -->
-                        <phase>install</phase>
-                        <goals>
-                            <goal>upload-single</goal>
-                            <goal>sshexec</goal>
-                        </goals>
-                        <configuration>
-                            <!-- 指定 SSH 账号 -->
-                            <serverId>test.ajaxjs.com</serverId>
-                            <!-- 要更新的 jar 包 -->
-                            <fromFile>target/aj-iam-server.jar</fromFile>
-                            <!-- 服务器部署位置 -->
-                            <url>${ssh.url.iam}</url>
-                            <!-- 重启脚本 先切换目录，才能正确执行脚本 -->
-                            <commands>
-                                <command>cd /home/service/aj-iam; ./startup-without-console.sh</command>
-                            </commands>
-                            <!-- 显示运行命令的输出结果 -->
-                            <displayCommandOutputs>true</displayCommandOutputs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
         <dependency>
@@ -94,27 +52,8 @@
 
         <dependency>
             <groupId>com.ajaxjs</groupId>
-            <artifactId>aj-iam-client</artifactId>
-            <version>1.1</version>
+            <artifactId>sqlman</artifactId>
+            <version>1.6</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.ajaxjs</groupId>
-            <artifactId>aj-message</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.ajaxjs</groupId>
-            <artifactId>aj-dataservice</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <!-- JSP 页面所需 -->
-        <!--        <dependency>
-                    <groupId>org.apache.tomcat.embed</groupId>
-                    <artifactId>tomcat-embed-jasper</artifactId>
-                    <version>${tomcat.version}</version>
-                </dependency>-->
     </dependencies>
 </project>
