--- a/aj-message/aj-message/pom.xml
+++ b/aj-message/aj-message/pom.xml
@@ -47,5 +47,11 @@
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jdbc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ajaxjs</groupId>
+            <artifactId>aj-net</artifactId>
+            <version>1.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
