--- a/aj-sample-app/src/profiles/dev/application.yaml
+++ b/aj-sample-app/src/profiles/dev/application.yaml
@@ -45,6 +45,10 @@ spring:
     port: 6379
     password: xxxx
     ssl: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 dubbo:
   application:
@@ -83,3 +87,13 @@ management:
 #        protocol: smtp
 #        username: antsitya@163.com
 #        password: ant163authcode
+
+auth:
+  run: false
+  clientId: kjkj
+  clientSecret: jkhjkhk
+
+db:
+  url: jdbc:h2:mem:testdb
+  user: sa
+  psw:
