--- a/aj-framework/pom.xml
+++ b/aj-framework/pom.xml
@@ -44,12 +44,18 @@
         <dependency>
             <groupId>com.ajaxjs</groupId>
             <artifactId>aj-net</artifactId>
-            <version>1.5</version>
+            <version>1.6</version>
         </dependency>
 
         <dependency>
             <groupId>com.ajaxjs</groupId>
-            <artifactId>aj-filupload</artifactId>
+            <artifactId>aj-fileupload</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ajaxjs</groupId>
+            <artifactId>aj-data-service</artifactId>
             <version>1.0</version>
         </dependency>
 
