--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
         <module>pom/opensource-parent</module>
         <module>aj-framework</module>
         <module>aj-spring</module>
-        <module>aj-base</module>
         <module>aj-message/aj-message-common</module>
         <module>aj-message/aj-message</module>
         <module>aj-sample-app</module>
         <module>aj-file-upload</module>
+        <module>aj-data-service</module>
     </modules>
 </project>
