--- a/springboot4/pom.xml
+++ b/springboot4/pom.xml
@@ -213,7 +213,11 @@
             <artifactId>tomcat-jdbc</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.ajaxjs</groupId>
+            <artifactId>ajaxjs-util</artifactId>
+            <version>1.3.0</version>
+        </dependency>
 
         <!--                <dependency>-->
         <!--                    <groupId>com.ajaxjs</groupId>-->
