--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <modules>
         <module>pom/common-project-parent</module>
-        <module>pom/opensource-parent</module>
+<!--        <module>pom/opensource-parent</module>-->
         <module>aj-framework</module>
         <module>aj-spring</module>
         <module>aj-message/aj-message-common</module>
